--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -11,3 +11,22 @@ services:
       - './api-service:/usr/src/app'
     ports:
       - 5001:5000
+    environment:
+      - APP_SETTINGS=api.config.DevelopmentConfig
+      - DATABASE_URL=postgres://postgres:postgres@api-db:5432/users_dev
+      - DATABASE_TEST_URL=postgres://postgres:postgres@api-db:5432/users_test
+    depends_on:
+      - api-db
+    links:
+      - api-db
+
+  api-db:
+      container_name: api-db
+      build:
+        context: ./api-service/api/db
+        dockerfile: Dockerfile
+      ports:
+        - 5435:5432
+      environment:
+        - POSTGRES_USER=postgres
+        - POSTGRES_PASSWORD=postgres
