--- a/api-service/requirements.txt
+++ b/api-service/requirements.txt
@@ -1,4 +1,8 @@
-Flask==0.12.2
+Flask==0.11
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.3.2
 psycopg2==2.7.3.1
+pymongo==3.4.0
+mongoengine==0.11.0
+py-bcrypt==0.4
+jsonschema==2.5.1
