--- a/api-service/requirements.txt
+++ b/api-service/requirements.txt
@@ -1,8 +1,15 @@
-Flask==0.11
+click==6.7
+Flask==0.12.2
+Flask-JWT==0.3.2
+Flask-RESTful==0.3.6
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.3.2
+itsdangerous==0.24
+Jinja2==2.10
+MarkupSafe==1.0
 psycopg2==2.7.3.1
-pymongo==3.4.0
-mongoengine==0.11.0
-py-bcrypt==0.4
-jsonschema==2.5.1
+PyJWT==1.4.2
+pytz==2018.3
+six==1.11.0
+SQLAlchemy==1.2.2
+Werkzeug==0.14.1
